contact: fix alignment issue in small media

--- a/templates/contact/css/contact.scss
+++ b/templates/contact/css/contact.scss
@@ -9,37 +9,38 @@
 
 .contact-options-container
 {
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+
+                          flex-direction: row;
+    @include media-XS() { flex-direction: column; }
+
     margin-top: 5rem;
-    text-align: center;
 }
 .contact-options-container > a
 {
-                          display: inline-block;
-    @include media-XS() { display:        block; }
+    display: inline-block;
+
+    box-sizing: border-box;
+    height:     196px;
 
     color: $nearly_black;
 
+    text-align: center;
+
     & + a
     {
-        margin-left: 5rem;
-        @include media-XS()
-        {
-            margin:
-            {
-                left: 0;
-                top:  2rem;
-            }
-        }
+                              margin-left: 5rem;
+        @include media-XS() { margin-left: 0; }
     }
 }
 .contact-options-container > a > img
 {
     display: block;
-    margin:
-    {
-        left:   auto;
-        right:  auto;
-        bottom: 1rem;
-    }
-    width: 128px;
+
+    margin-bottom: 1rem;
+
+    width:  auto;
+    height: 128px;
 }
